test/spec_vectors/store/fail/module_22.wat
(module (memory 1) (func $type-value-empty-in-loop (i32.const 0) (loop (i32.const 0) (i32.store))))